[COLOR yellow][B]v1.4.7[/B][/COLOR]
* Refactor startup.py.
* wizard.py - on build install - enable all addons in build ZIP file.
[COLOR yellow][B]v1.4.6[/B][/COLOR]
* Revert Custom APK Installer code (unnecessary).
[COLOR yellow][B]v1.4.5[/B][/COLOR]
* Downloader notification window - switch to remote image "APK_DOWNLOADER_CODE_IMAGE_URL".
* wizard.py - apk_update_check - Fix yesno dialogs correct buttons order.
[COLOR yellow][B]v1.4.4[/B][/COLOR]
* AUTO BUILD INSTALL ON FIRST LAUNCH - Auto install single build (no prompt), else - open builds menu
[COLOR yellow][B]v1.4.3[/B][/COLOR]
* APK Update prompt - Remove TV Bro support - only Downloader/Google Chrome.
* Always show Downloader code notification window before checking if installed.
[COLOR yellow][B]v1.4.2[/B][/COLOR]
* APK Update prompt - Open Downloader / Browser (Chrome/TV Bro) instead of wizard's APK menu.
[COLOR yellow][B]v1.4.1[/B][/COLOR]
* Add APK update check: 2 options - open Downloader manually, or download through Kodi to externalFX
[COLOR yellow][B]v1.4.0[/B][/COLOR]
* Add auto prompt for APK update check on Kodi startup.
* Cancel downloader as default fx app. must configure on inital setup.
[COLOR yellow][B]v1.3.9[/B][/COLOR]
* install.py - show configured file explorer if not downloader.
[COLOR yellow][B]v1.3.8[/B][/COLOR]
* "downloader_installed_text" text change.
[COLOR yellow][B]v1.3.7[/B][/COLOR]
* APK installer menu - add settings button to kodi android update addon.
[COLOR yellow][B]v1.3.6[/B][/COLOR]
* APK installer menu - add settings button to kodi android update addon.
* Prompt to change file explorer if Downloader app installed + configured.
[COLOR yellow][B]v1.3.5[/B][/COLOR]
* Adjust APK download finished dialog by downloader_app_installed bool
[COLOR yellow][B]v1.3.4[/B][/COLOR]
* Add support for APK download through Downloader.
* Disable auto kodi restart on PC on build updates.
[COLOR yellow][B]v1.3.3[/B][/COLOR]
* BUG FIX: Auto Quick Update note_id integer fix.